<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".destinations.AddNewContactActivity">
    <include
        layout="@layout/include_app_bar_blue"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:gravity="center">
        <!--TODO make the circle a bigger-->
        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/ic_camera_alt_white_24dp"
            android:background="@drawable/circle_blue"
            android:scaleType="center"
            android:contentDescription="@string/contetnt_desc_add_contact"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tap_to_set_contact_picture"
            android:layout_margin="8dp"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_name"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:paddingRight="16dp"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingLeft="0dp"
                android:paddingStart="0dp" />
            <EditText
                android:id="@+id/ed_contact_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_enter_name"
                android:padding="16dp"
                android:inputType="text"
                android:maxLines="1"
                android:background="@drawable/blue_border_background"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_phone_number"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:paddingRight="16dp"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingLeft="0dp"
                android:paddingStart="0dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Spinner
                    android:layout_width="60dp"
                    android:layout_height="55dp"
                    android:background="@drawable/blue_border_background"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"
                    android:id="@+id/country_code">

                </Spinner>
                <EditText
                    android:id="@+id/ed_contact_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_phone_no"
                    android:inputType="number"
                    android:maxLines="1"
                    android:padding="16dp"
                    android:layout_marginLeft="8dp"
                    android:background="@drawable/blue_border_background"
                    android:layout_marginStart="8dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>



    <Button
        android:id="@+id/action_create"
        style="@style/normal_button_blue"
        android:text="@string/create_contact"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:layout_margin="32dp"/>

</LinearLayout>