<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context="com.wordpress.herovickers.omup.destinations.CallActivty">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/photo_view"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/facebook_avatar"
            android:scaleType="centerCrop"
            />
        <TextView
            android:id="@+id/contact_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Nursie Gracie"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:layout_marginTop="16dp"/>
        <TextView
            android:id="@+id/phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="+23490875432342"
            android:textSize="18sp"
            android:textColor="@android:color/white"  />
        <TextView
            android:id="@+id/call_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="01:32:53"
            android:textSize="18sp"
            android:layout_marginTop="32dp"
            android:textColor="@android:color/white"  />
        <Chronometer
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:id="@+id/cmTimer" />
    </LinearLayout>

    <!--Call connected layout start-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/call_connected_layout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">
            <TextView
                android:id="@+id/tv_speaker"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/speaker"
                android:textColor="@color/white"
                android:drawableTop="@drawable/ic_volume_up_white_24dp"/>
            <TextView
                android:id="@+id/tv_hold_call"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/hold_call"
                android:textColor="@color/white"
                android:drawableTop="@drawable/ic_pause_white_24dp"/>
            <TextView
                android:id="@+id/tv_add_call"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/add_call"
                android:textColor="@color/white"
                android:drawableTop="@drawable/ic_add_white_24dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">
            <TextView
                android:id="@+id/tv_mute"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/mute"
                android:textColor="@color/white"
                android:drawableTop="@drawable/ic_mic_off_white_24dp"/>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content">
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/hangBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_call_white_24dp"
                    android:backgroundTint="@color/red" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_keypad"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_dialpad_white_24dp"
                android:text="@string/keypad"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>
    <!--Incoming call Layout. This is only visible when call is coming in-->
    <LinearLayout
        android:id="@+id/incoming_call_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_call_white_24dp"
                android:backgroundTint="@color/green"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ANSWER"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_call_white_24dp"
                android:backgroundTint="@color/red"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decline"
                android:textColor="@color/white"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
